--- a/templates/year.html
+++ b/templates/year.html
@@ -9,7 +9,7 @@
   <h1>Life Expectancy Lab - Pearl Liu</h1>
 
   <div id="north_america">
-    {% include 'north_america.svg' %}
+    {% include 'line_graph.svg' %}
   </div>
 
   <footer>
