--- a/templates/year.html
+++ b/templates/year.html
@@ -3,13 +3,24 @@
 <head>
   <title>Life Expectancy Lab</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rokkitt:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <style>
+    .rokkitt-font {
+      font-family: "Rokkitt", serif;
+      font-optical-sizing: auto;
+      font-weight: 200;
+      font-style: normal;
+    }
+  </style>
 </head>
 <body class="rokkitt-font">
 
-  <h1>Life Expectancy Lab - Pearl Liu</h1>
+  <h1> {{requested_year}} </h1>
 
   <div id="north_america">
-    {% include 'line_graph.svg' %}
+    {% include 'north_america.svg' %}
   </div>
 
   <footer>
